# supermarket-management

./: CMakeLists.txt  README.TXT  admin_form.cpp  admin_form.h  admin_form.ui  login_main_form.cpp  login_main_form.h  login_main_form.ui  main.cpp  user_form.cpp  user_form.h  user_form.ui
HARDWARE/: Font.h  GUI.c  Lcd_Driver.c  Lcd_Driver.h  MFRC522.c  MFRC522.h  QDTFT_demo.c  QDTFT_demo.h  atim.c  atim.h  atk_fan.c  atk_fan.h  buzz.c  buzz.h  dht11.c  dht11.h  hmitask.c  hmitask.h  key.c  key.h  led.c  led.h  mq2.c  mq2.h  systick.c  systick.h  usb2Com_drv.c  usb2Com_drv.h
SYSTEM/delay/: delay.c  delay.h
SYSTEM/sys/: sys.c  sys.h
SYSTEM/usart/: usart.c  usart.h
USER/: JLinkLog.txt  KEY.map  KEY.uvguix.30684  KEY.uvguix.Administrator  KEY.uvoptx  KEY.uvprojx  main.c  startup_stm32f10x_hd.lst  stm32f10x_it.c
build-cmake-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  config.ini  member_cards.db
build-cmake-debug/.cmake/api/v1/reply.prev/: cache-v2-d88e568eedf5c1980254.json  index-2026-01-27T09-46-50-0002.json  (+39 more)
build-cmake-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_test2_ae79a63d47.cmake
build-cmake-debug/.qtc_clangd/: compile_commands.json
build-cmake-debug/test2_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-cmake-debug/test2_autogen/EWIEGA46WW/: moc_admin_form.cpp  moc_admin_form.cpp.d  moc_login_main_form.cpp  moc_login_main_form.cpp.d  moc_user_form.cpp  moc_user_form.cpp.d
build-cmake-debug/test2_autogen/include/: main.moc.d  ui_admin_form.h  ui_login_main_form.h  ui_user_form.h
(+309 files in other folders)
